# SRenderer

./: .gitignore  CMakeLists.txt  Makefile  geometry.cpp  geometry.h  gl.cpp  gl.h  main.cpp  model.cpp  model.h  output.tga  tgaimage.cpp  tgaimage.h
output/: ao_diffuse.tga  backface.tga  diablo3_pose_diffuse_ao.tga  mvp.tga  output.tga  random_colors.tga  rasterization_zbuffer.tga  sm.tga  sm_diablo.tga  sm_diablo_shadow.tga  ssao.tga  test.tga  zbuffer_with_tex_proj.tga
